--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.58.1",
     "sonner": "^2.0.5",
