--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -20,7 +21,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.514.0",
     "motion": "^12.17.0",
-    "next": "15.3.3",
+    "next": "^15.3.4",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.3",
