--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.58.1",
+    "react-markdown": "^10.1.0",
     "sonner": "^2.0.5",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1",
