--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.58.1",
     "react-markdown": "^10.1.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "sonner": "^2.0.5",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1",
